<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">"Error happened while retrieving data, check with the developer</string>
    <string name="popularity">Popularity: </string>
    <string name="language">Language(s): </string>
    <string name="votes">Vote Counts: </string>
    <string name="release_date">Release Date: </string>
    <string name="movie_poster">Poster</string>
    <string name="votes_average">Votes Average: </string>
    <string name="status">Status: </string>
    <string name="date_format">dd MMM yyyy</string>
    <string name="sort_by_popular">Sort by Popular</string>
    <string name="sort_by_top_rated">Sort by Top Rated</string>
    <string name="original_name">Original Name:</string>
    <string name="no_extra">No Movie ID passed</string>
    <string name="no_internet_connection">Ops, it looks like you\'re not connected to the internet. Please check the connection and navigate to different page or select sort option</string>
    <string name="no_internet_connection_details">Ops, I knew that you\'re coming here :) \n It looks like you\'re not connected to the internet. Please check the connection and click back</string>
    <string name="image_content_description">Movie Poster</string>
    <string name="separator">|</string>
    <string name="trailers">Trailers</string>
    <string name="view_trailers">View all trailers</string>
    <string name="reviews">Reviews</string>
    <string name="show_favorite">Favorite Movies</string>
    <string name="favorite_activity">Favorite Movies</string>
    <string name="no_reviews">No Reviews</string>
    <string name="no_trailers">No Trailers</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

</resources>
